# DirectPath

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  check_ip_cache.sh  cleanup_accel.sh  deploy_accel.sh  deploy_direct_path.sh  dns_steer.c  import.c  import_domains  import_domestic.sh  import_domestic_max.sh  load_china_ip.sh  manage_dns_bpf.sh  monitor_domain_cache.sh  monitor_hotpath_cache.sh  tc_direct_accel.c  tc_direct_path.c  ubuntu-24.04.3-live-server-amd64.iso.2  xdp_direct_path.c
.cache/clangd/index/: import.c.3140215298598EEF.idx
bpf/tc/: tc_direct_path.c
bpf/xdp/: xdp_direct_path.c
cmake/modules/: BpfProgram.cmake
cmake/toolchains/: openwrt.cmake
include/: direct_path.h  direct_path_kernel.h  direct_path_load.h  direct_path_nft_rule.h  direct_path_prepare.h  direct_path_prog_load.h  direct_path_rule.h  direct_path_user.h
script/: blacklist_ip_map_load.sh  check_domain_cache.sh  cleanup_env.sh  deploy  deploy_direct_path  deploy_direct_path.sh  load_china_ip.sh  load_rules  load_rules.sh  monitor_domain_cache  monitor_domain_cache.sh  monitor_ip_cache  monitor_ip_cache.sh
src/: import.c  tc_direct_path.c  xdp_direct_path.c
user/: direct_path.c  import.c  load.c  nft_rule.c  prepare.c  prog_load.c  rule.c
